@@ -11,6 +11,7 @@ from zope.app.component.hooks import getSite
 from Products.ATContentTypes.interfaces import IFileContent, IImageContent
 from Products.Archetypes.interfaces.base import IBaseFolder
 from Products.CMFCore.utils import getToolByName
+from plone.app.portlets import PloneMessageFactory as _
 
 def _listTypesForInterface(portal, interface):
     """
@@ -49,7 +50,7 @@ def _infoDictForType(portal, ptype ):
     title = type_info.Title()
     product = type_info.product
     type_ui_info = ("%s (portal type: %s, product: %s)" %
-                    (portal.utranslate(title, default=title), ptype, product))
+                    (_(title, default=title), ptype, product))
     return {
         'portal_type': ptype,
         'type_ui_info': type_ui_info
@@ -65,7 +66,7 @@ class UploadFileTypeVocabulary(object):
         portal = getSite()
         flt = _listTypesForInterface(portal, IFileContent)
         ilt = _listTypesForInterface(portal, IImageContent)
-        items = [SimpleTerm('auto', 'auto', portal.utranslate('label_default_portaltype_configuration', 
+        items = [SimpleTerm('auto', 'auto', context.translate('label_default_portaltype_configuration', 
                                                       default=u'Default configuration (Content Type Registry).', 
                                                       domain='collective.quickupload')),]
         items.extend([ SimpleTerm(t['portal_type'], t['portal_type'], t['type_ui_info'])
